:beer: fix second bg image on mobile

--- a/styles/components/pages/index/project/_project.scss
+++ b/styles/components/pages/index/project/_project.scss
@@ -17,9 +17,10 @@
                 margin-bottom: calc(1.5rem + 1vw);
                 height: 27rem;
 
-                // @media only screen and (max-width: 750px) {
-                //     margin-bottom: 0;
-                // }
+                @media only screen and (max-width: 750px) {
+                    // margin-bottom: 0;
+                    margin-bottom: 2rem;
+                }
             }
             .projectCard {
                 .projectCard_video {
@@ -39,6 +40,13 @@
             .projectCard {
                 &:not(:first-child) {
                     margin-top: calc(3.5rem + 1vh);
+                }
+
+                .projectCard_video {
+                    @media only screen and (max-width: 750px) {
+                        margin-bottom: 0;
+                        // margin-bottom: 2rem;
+                    }
                 }
             }
 
